{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 153,
  "lineage": "5446a1be-8ed6-6276-0ae8-6a8515e55bbb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:vpc/vpc-36bf084c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-9a8e0ef6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-5a0e5e21",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-36bf084c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-ee4e7c91",
            "owner_id": "353750335352",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:security-group/sg-051389aa3ebe5fd82",
            "description": "Security group for the vault-example launch configuration",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051389aa3ebe5fd82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8201
              }
            ],
            "name": "vault-example20190626123812648000000004",
            "name_prefix": "vault-example",
            "owner_id": "353750335352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-36bf084c"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:security-group/sg-0db80b68841e38b1d",
            "description": "Security group for the consul-example launch configuration",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db80b68841e38b1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8302,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8302,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8400,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8400
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8600
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8600
              }
            ],
            "name": "consul-example20190626123812647000000002",
            "name_prefix": "consul-example",
            "owner_id": "353750335352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consul-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-36bf084c"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353750335352:security-group/sg-0e123eaacd658aa11",
            "description": "Security group for the nomad-example-server launch configuration",
            "egress": [],
            "id": "sg-0e123eaacd658aa11",
            "ingress": [],
            "name": "nomad-example-server20190626143634686700000002",
            "name_prefix": "nomad-example-server",
            "owner_id": "353750335352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-36bf084c"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-309619917",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3870794955",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nomad_servers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1525842711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e123eaacd658aa11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_api_inbound_from_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8200,
            "id": "sgrule-3130334302",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8200,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8400,
            "id": "sgrule-266271976",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8400,
            "id": "sgrule-1427147347",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8400,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cluster_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8201,
            "id": "sgrule-1267085375",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": true,
            "source_security_group_id": "sg-051389aa3ebe5fd82",
            "to_port": 8201,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cluster_inbound_from_self_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8200,
            "id": "sgrule-920744971",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": true,
            "source_security_group_id": "sg-051389aa3ebe5fd82",
            "to_port": 8200,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8600,
            "id": "sgrule-123430437",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8600,
            "id": "sgrule-458725920",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8600,
            "id": "sgrule-2039776445",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8600,
            "id": "sgrule-3204987343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8600,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8500,
            "id": "sgrule-3861164718",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8500,
            "id": "sgrule-2676719946",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8500,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4646,
            "id": "sgrule-1035381970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e123eaacd658aa11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4646,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_rpc_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4647,
            "id": "sgrule-3751022801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e123eaacd658aa11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4647,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-495493626",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-2974674459",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-807794155",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-2166176550",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": true,
            "source_security_group_id": "sg-051389aa3ebe5fd82",
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-1665614690",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-3481406595",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-2491045380",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8301,
            "id": "sgrule-625121481",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": true,
            "source_security_group_id": "sg-051389aa3ebe5fd82",
            "to_port": 8301,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_tcp_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4648,
            "id": "sgrule-1614534407",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e123eaacd658aa11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4648,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.nomad_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_udp_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4648,
            "id": "sgrule-519320991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e123eaacd658aa11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4648,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8302,
            "id": "sgrule-3768476606",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8302,
            "id": "sgrule-3079420343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8302,
            "id": "sgrule-2656141606",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8302,
            "id": "sgrule-332634712",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8302,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8300,
            "id": "sgrule-4289338873",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8300,
            "id": "sgrule-1296216543",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": true,
            "source_security_group_id": "sg-0db80b68841e38b1d",
            "to_port": 8300,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2033886240",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db80b68841e38b1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nomad_servers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2821766827",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e123eaacd658aa11",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1785718476",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051389aa3ebe5fd82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}